features(rabbitmq): add notification realtime
