# internal/routers/event/event.router.go
@@ -21,6 +21,11 @@ func (mktC *EventRouter) InitEventRouter(Router *gin.RouterGroup) {
 	uploadClient := pb.NewUploadServiceClient(global.Grpc)
 	privateEventRouter := Router.Group("/events")
 	privateEventRouter.Use(middlewares.Authentication())
+	{
+		privateEventRouter.POST("/:id/like", event.Event.EventLike)
+		privateEventRouter.DELETE("/:id/unlike", event.Event.EventUnLike)
+		privateEventRouter.GET("/users", event.Event.EventsIsLike)
+	}
 	privateEventRouter.Use(middlewares.CheckPermission())
 	{
 		privateEventRouter.PUT(
